# CS515-Image-foundation-models

./: .gitignore  NOTICE.md  README.md  pyproject.toml  requirements.txt
configs/: config-ade20k-linear-training-1gpu.yaml  feature_analysis.yaml  linear_probe_ade20k.yaml  linear_probe_voc.yaml  m2f_inference_ade20k.yaml  mini_dino_cifar100.yaml
docs/: BENCHMARKS.md  METHODS.md  MODEL_CARD.md
examples/: README.md
notebooks/: 01_dino_feature_exploration.ipynb  01_linear_probe_training.ipynb  02_dino_mini_training.ipynb  02_mask2former_inference.ipynb  03_visualization.ipynb  04_other_tasks_overview.ipynb
report/: references.bib  report.tex
report/report/: references.bib  report.tex
scripts/: build_notebooks.py  run_feature_analysis.py  run_mini_dino.py  segment_image.py
src/: __init__.py  data_utils.py  evaluation.py  linear_probe.py  mask2former_inference.py  model_loading.py  visualization.py
src/data/: __init__.py  datasets.py  transforms.py
src/dino/: __init__.py  augmentation.py  loss.py  model.py  teacher_student.py  train.py
src/utils/: __init__.py  feature_analysis.py  io.py  visualization.py
src/vpr/: __init__.py
tests/: conftest.py  test_augmentation.py  test_loss.py  test_model.py  test_teacher_student.py
